--- a/index.html
+++ b/index.html
@@ -90,26 +90,65 @@
     </span>
     <!-- template -->
     <div id="template" style="flex:1;">
-      <div class="row" style="margin-top: 80px; margin-bottom: 5px; padding: 0 10%;font-size: 20px">
+      <div style="margin-top: 80px; margin-bottom: 5px; padding: 0 10%;font-size: 20px">
         <p>本公司因業務調整，2019.7.15 sivann-online 正式結束營運，感謝各位客戶長久以來的支持與愛護。</p>
+        <p>若有任何商品相關業務需求，請聯繫賴先生，Email：kevin.lai@sivann.com.tw。</p>
         <p>愛文西門全體同仁，再次感謝您的支持，希望很快能有機會再為您服務，謝謝！</p>
       </div>
+
+      <div class="row"  style="background-color: #ECECEC; margin-top: 10px; align-items: center; justify-content: center;">
+        <div>
+          <div style="display: flex; margin-top: 20px; float: left; padding: 0 5%; flex: 0 0 50%; width: 50%; max-width: 50%; position: relative;">
+            <div style="background-color: #ECECEC; display: flex; align-items: center; justify-content: center;">
+              <img class="img-fluid" src="./assets/img/03_TestMate.png" alt="">
+            </div>
+          </div>
+
+          <div style="margin-top: 30px; float: left; flex: 0 0 50%; width: 50%; max-width: 50%; position: relative;">
+            <h1 class="title title-en">TestMate</h1>  　
+            <p>TestMate 測試良伴 － 源自工程師對測試的火大</p>
+            <p>💡 集合 8 種常用測試元件，測試最速效</p>
+            <p>💡 一張名片大，精巧便攜、不佔桌面</p>
+            <p>💡 精緻美觀，可當產品雛形展示面板</p>
+            <p>💡 沒有任何奇巧，訴求簡單：就是要「輕快」！</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="_3x4block">
-			<div class="block_item">
-				 <a href="http://www.sivann-online.com.tw/products/testmate "> 
-				<img class="block_img" src="./assets/img/3x4block_1.jpg" width="600">
-				 </a> 
-			</div>
-			<div class="block_item">
-			   <a href="http://www.sivann-online.com.tw/products/testmate "> 
-				  <img class="block_img" src="./assets/img/3x4block_2.jpg" width="600">
-				 </a> 
-			</div>
-			<div class="block_item">
-				 <a href="http://www.sivann-online.com.tw/products/testmate "> 
-				  <img class="block_img" src="./assets/img/3x4block_3.jpg" width="600">
-				 </a> 
-			</div>
+      <div class="block_item">
+        <img class="block_img" src="./assets/img/3x4block_1.jpg" width="600">
+      </div>
+      <div class="block_item">
+        <img class="block_img" src="./assets/img/3x4block_2.jpg" width="600">
+      </div>
+      <div class="block_item">
+        <img class="block_img" src="./assets/img/3x4block_3.jpg" width="600">
+      </div>
+    </div>
+
+    <hr style="margin: 20px 10%;">
+
+    <div id="template" style="flex:1;">
+      <div class="row"  style="align-items: center; justify-content: center;">
+        <div>
+          <div style="display: flex; margin: 30px 0; float: left; padding: 0 5%; width: 100%; max-width: 100%; position: relative;">
+            <div style="display: flex; align-items: center; justify-content: center;">
+              <img class="block_img" src="./assets/img/ark_04.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="_2x2block" style="margin-bottom: 20px;">
+      <div class="block_item">
+        <img class="block_img" src="./assets/img/ark_05.jpg">
+      </div>
+      <div class="block_item">
+        <img class="block_img" src="./assets/img/ark_06.jpg">
+      </div>
     </div>
     <link href='./assets/css/index.css' rel='stylesheet' type='text/css' media='all' />
   </div>
